--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "4.6.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.14.6",
+    "vform": "^1.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
